Comment how to port to new Base64 encoder in Java 8 and 9